--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -3,7 +3,7 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="{{ '/' | relative_url }}"><img src="assets/images/logo-smaller.jpg"></a>
+        <a class="site-title" href="{{ '/' | relative_url }}"><img src="assets/images/logo-smaller.jpg" width="111" height="105"></a>
         <ul class="visible-links">
           {%- for link in site.data.navigation.main -%}
             {%- if link.url contains '://' -%}
